# pout

./: .gitignore  Makefile.am  README  autogen.sh  build-and-run.sh  configure.ac  default.nix
data/: cheese-main-window.ui  cheese-prefs.ui  org.gnome.Cheese.gschema.xml
libcheese/: cheese-avatar-chooser.c  cheese-avatar-widget.c  cheese-camera-device.c  cheese-gtk.symbols
rust/: Cargo.nix  Cargo.toml  crates-io.list  crates-io.nix  regen-nix.sh
rust/include/: pout-rust.h
rust/src/: lib.rs
src/: cheese-application.vala  cheese-countdown.vala  cheese-main.vala  cheese-preferences.vala  cheese-window.vala
src/vapi/: cheese-common.vapi
tests/: test-libcheese-gtk.c
