[package]
name = "pout"
version = "0.1.0"
authors = ["Kier Davis <kierdavis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pout"
crate-type = ["staticlib"]

[dependencies]
glib = "0.9.3"
glib-sys = "0.9.1"
gtypes = "0.2.0"
gstreamer-sys = "0.8.1"
libc = "0.2.67"
